@@ -1,5 +1,11 @@
 2000-05-23  DJ Delorie  <dj@cygnus.com>
 
+	* syscalls.cc (_cygwin_istext_for_stdio): New, for newlib
+	* include/cygwin/version.h: Bump API number for detect old
+	programs using old getc/putc macros
+	
+2000-05-23  DJ Delorie  <dj@cygnus.com>
+
 	* dir.cc (writable_directory): handle root directories
 
 Tue May 23 10:09:26 2000  Christopher Faylor <cgf@cygnus.com>
